<resources>
    <string name="app_name">Tarea Android Semana2</string>
    <string name="nombre">Nombre Completo</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripContacto">Descripción Contacto</string>
    <string name="nombre1">Nombre Completo:</string>
    <string name="fechaNac1">Fecha Nacimiento:</string>
    <string name="telefono1">Tel:</string>
    <string name="email1">Email:</string>
    <string name="descripContacto1">Descripción:</string>
    <string name="nombreBotonFecha">Seleccionar Fecha</string>
    <string name="nombreBotonSiguiente">Siguiente</string>
    <string name="nombreBotonEditar">Editar Datos</string>
    <string name="tituloConfirmar">Confirmar Datos</string>
</resources>