<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/left"
    android:paddingRight="@dimen/right"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/top"
            android:hint="@string/nombre">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/etiFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top"
        android:layout_below="@+id/etiNombre">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/top"
            android:hint="@string/fechaNac">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date|datetime" />
            <Button
                android:id="@+id/btnMostrarDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/etiNombre"
                android:text="@string/nombreBotonFecha"
                android:onClick="mostrarFecha"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etiTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etiFechaNac"
            android:paddingTop="@dimen/top"
            android:hint="@string/telefono">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etiTelefono"
            android:paddingTop="@dimen/top"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etiContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etiEmail"
            android:paddingTop="@dimen/top"
            android:hint="@string/descripContacto">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreBotonSiguiente"
            android:layout_below="@+id/etiContacto"
            android:paddingTop="@dimen/top"
            android:onClick="mostrarSiguiente"/>

    </RelativeLayout>

</LinearLayout>